--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,3 +11,10 @@ jobs:
 
       - name: Hello world
         run: echo "Hello from ${{ github.workflow }}" triggered by the ${{ github.event_name }}
+
+      - name: 👽 Another one
+        env:
+          JOB_CONTEXT: ${{ toJson(job) }}
+        run: |
+          echo "Job context: $JOB_CONTEXT"
+          echo "Done!"
