--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,3 +18,11 @@ jobs:
         run: |
           echo "Job context: $JOB_CONTEXT"
           echo "Done!"
+
+      - name: Install dependencies
+        working-directory: ./
+        run: composer install --ignore-platform-reqs
+
+      - name: Run the tests
+        working-directory: ./
+        run: composer phpunit
